# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> sparc64/kernel-config,
  alpha/kernel-config-2.6, ia64/kernel-config-2.6, x86/kernel-config-2.6,
  x86_64/kernel-config-2.6:
  Updated the kernel configs for arches which have given us their 2008.0
  configs. This is 3.4.10_pre4 for testing.

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Redirect which output to /dev/null and put quotes around var in test

  29 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, ppc/modules_load, ppc64/modules_load, um/modules_load,
  x86_64/modules_load:
  Changed MDRAID to MDADM for bug #211316.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_initramfs.sh, gen_initrd.sh, generic/initrd.scripts:
  Added a --no-keymap option for bug #210886.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  generic/linuxrc:
  Use which to determine the location of splash_geninitramfs, rather than
  having an endless number of conditional checks for the location. This fixes
  bug #211521. Thanks to Uriy Zhuravlev <stalkerg@gmail.com> for finding the
  problem and suggesting a solution.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -xenU/kernel-config-2.6, -xen0/kernel-config-2.6, genkernel,
  -xen0/busy-config, -xen0/config.sh, -xen0/modules_load, -xenU/busy-config,
  -xenU/config.sh, -xenU/modules_load:
  Removing the xen0 and xenU arches, since they didn't work, anyway. This is
  genkernel 3.4.10_pre3 for testing.

  20 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
  Add missing space before closing ]

  19 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts:
  Apply patch from bug 210457 to fix variable substitution. Thanks to Paul
  Taylor <birder@ozemail.com.au> for reporting
